mdapipkg/unpackaged/objects/Tax_Exemption__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <label>Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Id__c</fullName>
        <label>Library Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Author__c</fullName>
        <label>Tax Author</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Certi_No__c</fullName>
        <label>Tax Certification Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Tax Exemption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Exemption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Exemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>